feat: Improve project structure to match OpenCode patterns
Major Changes:
- Added build system with esbuild
- Added scripts/ directory (build, dev, dev-setup)
- Added docs/ directory with API documentation
- Enhanced config/ with getDefaultConfig() and full schema
- Created .supercoin/config.example.json template
- Reorganized tests with subdirectories
- Added work/ directory for task tracking
- Fixed test imports for new schema
- Updated README.md with architecture diagram

New Structure:
- scripts/ - Build and development scripts
- docs/ - Comprehensive documentation
- tests/unit/{auth,models,agents,core,utils} - Organized unit tests
- tests/integration/{auth-flow,model-routing,agent-workflow} - Integration tests
- tests/e2e/scenarios - E2E scenarios
- tests/fixtures, tests/helpers - Test support
- plan/ - Project planning documents
- work/ - Work tracking with markdown

Documentation:
- API.md - Complete API reference
- 01-STRUCTURE-IMPROVEMENT.md - Detailed improvement plan

Build System:
- esbuild for fast, optimized builds
- Dual targets: CLI and Library
- Source maps for debugging
- TypeScript declarations

Config Management:
- Default config with defaults
- Environment variable support
- Project config (.supercoin/config.json)
- User config (~/.config/supercoin/config.json)
- Config example template (.supercoin/config.example.json)

Test Structure:
- Organized subdirectories for better test organization
- Support for fixtures and test helpers

This aligns SuperCoin with OpenCode's modular architecture
while maintaining its unique identity as a CLI-focused AI hub.

--- a/supercoin/package.json
+++ b/supercoin/package.json
@@ -8,12 +8,14 @@
     "supercoin": "dist/cli/index.js"
   },
   "scripts": {
-    "dev": "bun --hot src/cli/index.ts",
-    "build": "bun build src/cli/index.ts --outdir dist/cli --target node",
+    "build": "bun run scripts/build.ts",
+    "dev": "bun run scripts/dev.ts",
+    "dev:setup": "bun run scripts/dev-setup.ts",
     "start": "bun src/cli/index.ts",
     "test": "bun test",
     "test:coverage": "bun test --coverage",
-    "lint": "tsc --noEmit"
+    "lint": "tsc --noEmit",
+    "typecheck": "bun run scripts/build.ts && tsc --noEmit"
   },
   "dependencies": {
     "@clack/prompts": "^0.7.0",
