--- a/supercoin/package.json
+++ b/supercoin/package.json
@@ -18,7 +18,11 @@
     "typecheck": "bun run scripts/build.ts && tsc --noEmit"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^3.0.9",
+    "@ai-sdk/google": "^3.0.6",
+    "@ai-sdk/openai": "^3.0.7",
     "@clack/prompts": "^0.7.0",
+    "ai": "^6.0.26",
     "commander": "^12.0.0",
     "hono": "^4.0.0",
     "zod": "^3.22.4"
