--- a/supercoin/package.json
+++ b/supercoin/package.json
@@ -39,9 +39,13 @@
     "@ai-sdk/google": "^3.0.6",
     "@ai-sdk/openai": "^3.0.7",
     "@clack/prompts": "^0.7.0",
+    "@types/react": "^19.2.7",
     "ai": "^6.0.26",
     "commander": "^12.0.0",
     "hono": "^4.0.0",
+    "ink": "^6.6.0",
+    "lucide-react": "^0.562.0",
+    "react": "^19.2.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
