--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "declarationMap": true,
     "outDir": "./dist",
     "baseUrl": ".",
+    "jsx": "react-jsx",
     "paths": {
       "~/*": ["./src/*"]
     },
