--- a/package.json
+++ b/package.json
@@ -31,16 +31,19 @@
     "test": "bun test",
     "test:coverage": "bun test --coverage",
     "lint": "tsc --noEmit",
-    "typecheck": "node scripts/build.js && tsc --noEmit"
+    "typecheck": "node scripts/build.js && tsc --noEmit",
+    "prepare": "npm run build"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^3.0.9",
     "@ai-sdk/google": "^3.0.6",
     "@ai-sdk/openai": "^3.0.7",
     "@clack/prompts": "^0.7.0",
+    "@hono/node-server": "^1.19.8",
     "@types/react": "^19.2.7",
     "ai": "^6.0.26",
     "commander": "^12.0.0",
+    "esbuild": "^0.27.2",
     "hono": "^4.0.0",
     "ink": "^6.6.0",
     "lucide-react": "^0.562.0",
@@ -49,7 +52,6 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
-    "esbuild": "^0.27.2",
     "typescript": "^5.3.3"
   },
   "keywords": [
