fix: handle esbuild missing in build script gracefully

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "test:coverage": "bun test --coverage",
     "lint": "tsc --noEmit",
     "typecheck": "node scripts/build.js && tsc --noEmit",
-    "postinstall": "npm run build"
+    "postinstall": "npm run build || echo 'Build skipped (dist may already exist)'"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^3.0.9",
