fix: remove postinstall since dist is in Git

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "url": "https://github.com/JEO-tech-ai/supercode/issues"
   },
   "homepage": "https://github.com/JEO-tech-ai/supercode#readme",
-  "scripts": {
+   "scripts": {
     "build": "node scripts/build.js",
     "dev": "bun run scripts/dev.ts",
     "dev:setup": "bun run scripts/dev-setup.ts",
@@ -31,8 +31,7 @@
     "test": "bun test",
     "test:coverage": "bun test --coverage",
     "lint": "tsc --noEmit",
-    "typecheck": "node scripts/build.js && tsc --noEmit",
-    "postinstall": "if [ ! -d 'dist' ]; then npm run build; fi"
+    "typecheck": "node scripts/build.js && tsc --noEmit"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^3.0.9",
