Apply work plan: Update branding and documentation
- Update repository URLs from supercode to supercoin
- Replace OpenCode references with SuperCoin in documentation
- Replace Sisyphus references with Cent in documentation
- Update README.md with correct repository URLs
- Fix package.json author and repository fields
- All tests passing (143 pass, 0 fail)

--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/JEO-tech-ai/supercode.git"
+    "url": "https://github.com/JEO-tech-ai/supercoin.git"
   },
   "bugs": {
-    "url": "https://github.com/JEO-tech-ai/supercode/issues"
+    "url": "https://github.com/JEO-tech-ai/supercoin/issues"
   },
-  "homepage": "https://github.com/JEO-tech-ai/supercode#readme",
+  "homepage": "https://github.com/JEO-tech-ai/supercoin#readme",
   "scripts": {
     "build": "node scripts/build.js",
     "dev": "bun run scripts/dev.ts",
@@ -64,6 +64,6 @@
     "gemini",
     "supercoin"
   ],
-  "author": "supercent",
+  "author": "JEO-tech-ai",
   "license": "MIT"
 }
