--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "hono": "^4.0.0",
     "ink": "^6.6.0",
     "lucide-react": "^0.562.0",
+    "node-pty": "^1.1.0",
     "react": "^19.2.3",
     "zod": "^3.22.4"
   },
