--- a/package.json
+++ b/package.json
@@ -30,6 +30,17 @@
     "start": "bun packages/cli/src/index.ts",
     "cli": "bun packages/cli/src/index.ts"
   },
+  "dependencies": {
+    "@ai-sdk/anthropic": "^3.0.9",
+    "@ai-sdk/google": "^3.0.6",
+    "@ai-sdk/openai": "^3.0.7",
+    "@clack/prompts": "^0.7.0",
+    "@hono/node-server": "^1.19.8",
+    "ai": "^6.0.26",
+    "hono": "^4.7.0",
+    "node-pty": "^1.1.0",
+    "zod": "^3.22.4"
+  },
   "devDependencies": {
     "@types/bun": "latest",
     "sst": "^3.17.25",
