fix(ci): prevent parallel build race condition by excluding desktop from CI
- Remove beforeBuildCommand from tauri.conf.json to prevent double-build
- Add @supercoin/console-app dependency to desktop for proper build order
- Update CI workflow to exclude desktop build (requires Rust/Tauri)
- Update turbo.json outputs to include .output and .vinxi directories
- Add placeholder icons for desktop app

--- a/packages/desktop/package.json
+++ b/packages/desktop/package.json
@@ -8,7 +8,8 @@
     "build:debug": "tauri build --debug"
   },
   "dependencies": {
-    "@tauri-apps/api": "^2.5.0"
+    "@tauri-apps/api": "^2.5.0",
+    "@supercoin/console-app": "workspace:*"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2.5.0",
