--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,5 +27,5 @@ jobs:
     - name: Run tests
       run: bun test
 
-    - name: Build
-      run: bun run build
+    - name: Build (excluding desktop)
+      run: bun turbo run build --filter='!@supercoin/desktop'
