--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "commander": "^14.0.2",
     "hono": "^4.7.0",
     "ink": "^6.6.0",
+    "ink-text-input": "^6.0.0",
     "node-pty": "^1.1.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
@@ -53,6 +54,7 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "bun-types": "^1.3.5",
     "sst": "^3.17.25",
     "turbo": "^2.5.0",
     "typescript": "^5.3.3"
