refactor: rename SuperCoin to SuperCode
- Rename project from SuperCoin to SuperCode throughout codebase
- Update package.json name, bin, repository, keywords
- Update CLI name, descriptions, and command references
- Update Logo component with new SuperCode branding
- Update Sidebar footer branding
- Update config schema types (SuperCoinConfig → SuperCodeConfig)
- Update config file names (supercode.json primary, supercoin.json fallback)
- Update knowledge manager storage path (.supercode)
- Update CI workflow name and filter
- Update SST config app name
- Update README.md with SuperCode branding and documentation
- Add backward compatibility aliases for existing integrations

BREAKING CHANGE: CLI command renamed from 'supercoin' to 'supercode'

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: SuperCoin CI
+name: SuperCode CI
 
 on:
   push:
@@ -28,4 +28,4 @@ jobs:
       run: bun test
 
     - name: Build (excluding desktop)
-      run: bun turbo run build --filter='!@supercoin/desktop'
+      run: bun turbo run build --filter='!@supercode/desktop'
