feat: add web console hooks, components, and planning docs
- Add SolidJS hooks: useDragDrop, useImagePaste
- Add SolidJS components: DragDropOverlay, ImagePreview
- Add comprehensive UI enhancement planning docs
- Update .gitignore to exclude build artifacts and session data

--- a/.gitignore
+++ b/.gitignore
@@ -16,9 +16,19 @@ opencode.json
 .opencode.json
 supercoin.json
 
-# Build
- dist/
- build/
+# Session data
+.supercoin/
+
+# Build outputs
+dist/
+build/
+packages/console/app/.output/
+packages/console/app/.vinxi/
+packages/console/app/app.config.timestamp_*.js
+
+# Logs
+*.log
+firebase-debug.log
 
 # Monorepo tooling
 .sst/
@@ -28,4 +38,7 @@ packages/database/.data/
 
 # TypeScript
 *.tsbuildinfo
+
+# Lock files (optional - keep bun.lock for reproducible builds)
+# bun.lock
 
