--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@openauthjs/openauth": "^0.4.3",
     "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
+    "@types/turndown": "^5.0.6",
     "ai": "^6.0.26",
     "commander": "^14.0.2",
     "hono": "^4.7.0",
@@ -50,6 +51,8 @@
     "node-pty": "^1.1.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "turndown": "^7.2.2",
+    "yaml": "^2.8.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
