docs: fix README version to match package.json (v0.3.0), reorganize docs structure
- Update README badge from v0.7.1 to v0.3.0 (match package.json)
- Update TUI example version display
- Rename v0.7.1 Highlights section to v0.3.0 Highlights
- Rename docs/README.md to docs/DEVELOPMENT.md (internal dev docs)
- Fix footer links: remove non-existent docs/discord, add Issues link
- Add new documentation structure (plan/, work/, history/)
- Add provider unification changes (Bedrock, Azure, Vertex, DeepInfra)
- Remove outdated implementation and work tracking files

--- a/package.json
+++ b/package.json
@@ -34,8 +34,12 @@
     "cli": "bun src/cli/index.ts"
   },
   "dependencies": {
+    "@ai-sdk/amazon-bedrock": "^3.0.73",
     "@ai-sdk/anthropic": "^3.0.9",
+    "@ai-sdk/azure": "^2.0.91",
+    "@ai-sdk/deepinfra": "^1.0.31",
     "@ai-sdk/google": "^3.0.6",
+    "@ai-sdk/google-vertex": "^3.0.97",
     "@ai-sdk/openai": "^3.0.7",
     "@clack/prompts": "^0.7.0",
     "@hono/node-server": "^1.19.8",
